# sizr

./: Cargo.toml  LICENSE  README.md  install.sh
src/: main.rs
